--- a/index.html
+++ b/index.html
@@ -980,12 +980,12 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <div class="social-links">
+        <!--    <div class="social-links">
                 <a href="#" title="Instagram">📷</a>
                 <a href="#" title="Behance">🎨</a>
                 <a href="#" title="LinkedIn">💼</a>
                 <a href="#" title="Dribbble">🏀</a>
-            </div>
+            </div> -->
             <p>&copy; 2025 Seif Eddine Chatti. All rights reserved.</p>
         </div>
     </footer>
